--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
       </div>
 
       <div id="score"></div>
+	 <div id="labellevel">Level-</div>
+	  <div id="level"></div>
     </div>
 
     <script type="text/javascript" src="js/resources.js"></script>
